Bug 1426062 - Follow-up for bug 1422465: check parent before dereferencing it. r=surkov